Included new loopback services files and re-organized views and controllers

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1>Welcome</h1>
   <p class="lead">
-    Expense Voucher Management System for Small and Medium Enterprises
+    Expense Voucher Management Tool
   </p>
 
   <div class="alert alert-danger" role="alert" ng-show="error!==''">
