Wired up more functionality

--- a/app/views/create-voucher.html
+++ b/app/views/create-voucher.html
@@ -137,7 +137,7 @@
           <button type="button" class="btn btn-default" ng-click="submit()">Submit</button>
         <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
       </div>
-      <h3 class="pull-right"> {{voucher.State}}</h3>
+      <h4 class="pull-right"> {{voucher.State | uppercase}}</h4>
     </div>
   </div>
 
