Preliminary work on Vouchers reporting

--- a/app/views/create-voucher.html
+++ b/app/views/create-voucher.html
@@ -135,7 +135,8 @@
       <div class="btn-group btn-group-lg" role="group" aria-label="...">
         <button type="button" class="btn btn-default" ng-click="save()">Save</button>
           <button type="button" class="btn btn-default" ng-click="submit()">Submit</button>
-        <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
+        <button type="button" class="btn btn-default" ng-click="cancel()">
+          <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
       </div>
       <h4 class="pull-right"> {{voucher.State | uppercase}}</h4>
     </div>
