--- a/app/views/voucher.html
+++ b/app/views/voucher.html
@@ -135,18 +135,24 @@
     <div class="btn-group btn-group-lg" ng-if="activeVoucher" role="group" aria-label="...">
       <button type="button" class="btn btn-default" ng-click="save()">Save</button>
       <button type="button" class="btn btn-default" ng-click="submit()">Submit</button>
-      <button type="button" class="btn btn-default" ng-click="print()">Print</button>
-      <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
+      <button type="button" class="btn btn-default" ng-click="print()">
+        <span class="glyphicon glyphicon-print"></span> Print</button>
+      <button type="button" class="btn btn-default" ng-click="cancel()">
+        <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
     </div>
     <div class="btn-group btn-group-lg" ng-if="submittedVoucher" role="group" aria-label="...">
       <button type="button" class="btn btn-default" ng-click="approve()">Approve</button>
       <button type="button" class="btn btn-default" ng-click="reject()">Reject</button>
-      <button type="button" class="btn btn-default" ng-click="print()">Print</button>
-      <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
+      <button type="button" class="btn btn-default" ng-click="print()">
+        <span class="glyphicon glyphicon-print"></span> Print</button>
+      <button type="button" class="btn btn-default" ng-click="cancel()">
+        <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
     </div>
     <div class="btn-group btn-group-lg" ng-if="archivedVoucher" role="group" aria-label="...">
-      <button type="button" class="btn btn-default" ng-click="print()">Print</button>
-      <button type="button" class="btn btn-default" ng-click="cancel()">Back</button>
+      <button type="button" class="btn btn-default" ng-click="print()">
+        <span class="glyphicon glyphicon-print"></span> Print</button>
+      <button type="button" class="btn btn-default" ng-click="cancel()">
+        <span class="glyphicon glyphicon-circle-arrow-left"></span> Back</button>
     </div>
     <h4 class="pull-right"> {{voucher.State | uppercase}}</h4>
   </div>
