--- a/app/views/home.html
+++ b/app/views/home.html
@@ -42,7 +42,7 @@
             <p class="lead" ng-if="!orgSubmittedVouchers.length"> There aren't any.</p>
             <div class="list-group" ng-if="orgSubmittedVouchers.length">
               <a class="list-group-item" data-ng-repeat="voucher in orgSubmittedVouchers"
-                 data-ng-href="#/organisation/{{organisation.id}}/manager/{{employee.employeeID}}/employee/{{voucher.employeeId}}/voucher/{{voucher.id}}/edit" >
+                 data-ng-href="#/organisation/{{organisation.id}}/manager/{{employee.employeeID}}/employee/{{voucher.employeeId}}/voucher/{{voucher.id}}" >
                 <p class="list-group-item-text">
                   <span>{{ voucher.employeeId }}</span>
                 </p>
@@ -61,9 +61,11 @@
           <div class="col-md-4">
             <h4>Work with Vouchers</h4>
             <div class="list-group">
-              <a class="list-group-item" data-ng-href="#/organisation/{{organisation.id}}/vouchers/submitted">
+              <a class="list-group-item"
+                 data-ng-href="#/organisation/{{organisation.id}}/manager/{{employee.employeeID}}/vouchers/submitted">
                 All Submitted Vouchers</a>
-              <a class="list-group-item" data-ng-href="#/organisation/{{organisation.id}}/vouchers/completed">
+              <a class="list-group-item"
+                 data-ng-href="#/organisation/{{organisation.id}}/manager/{{employee.employeeID}}/vouchers/completed">
                 All Completed Vouchers</a>
             </div>
           </div>
@@ -100,8 +102,8 @@
               <h4>Actions</h4>
               <div class="list-group">
                 <button class="list-group-item" data-ng-click="newVoucher()">Create a new Voucher</button>
-                <button class="list-group-item" data-ng-click="report()">View Submitted Vouchers</button>
-                <button class="list-group-item" data-ng-click="report()">View Completed Vouchers</button>
+                <button class="list-group-item" data-ng-click="employeeVoucherQuery('submitted')">View Submitted Vouchers</button>
+                <button class="list-group-item" data-ng-click="employeeVoucherQuery('completed')">View Completed Vouchers</button>
               </div>
             </div>
             <!--Left hand column for actions ends-->
@@ -118,7 +120,7 @@
                   <p ng-if="!activeVouchers.length"> You don't have any.</p>
                   <div class="list-group" ng-if="activeVouchers.length">
                     <a class="list-group-item" data-ng-repeat="voucher in activeVouchers"
-                       data-ng-href="#/employee/{{employee.employeeID}}/voucher/{{voucher.id}}/edit" >
+                       data-ng-href="#/employee/{{employee.employeeID}}/voucher/{{voucher.id}}" >
                       <p class="list-group-item-text">
                         <span>Amount</span>
                         <span class="badge">{{voucher.Amount | currency:"&#8377;"}}</span>
@@ -128,6 +130,9 @@
                       </p>
                     </a>
                   </div>
+                  <a class="btn btn-default pull-right"
+                     ng-show="activeVouchers.length >= 5"
+                     ng-click="employeeVoucherQuery('draft')">View All</a>
                 </div>
               </div>
               <!--Active vouchers panel ends-->
@@ -141,7 +146,7 @@
                   <p ng-if="!approvedVouchers.length"> You don't have any.</p>
                   <div class="list-group" ng-if="approvedVouchers.length">
                     <a class="list-group-item" data-ng-repeat="voucher in approvedVouchers"
-                       data-ng-href="#/employee/{{employee.employeeID}}/voucher/{{voucher.id}}/edit" >
+                       data-ng-href="#/employee/{{employee.employeeID}}/voucher/{{voucher.id}}" >
                       <p class="list-group-item-text">
                         <span>Amount</span>
                         <span class="badge">{{voucher.Amount | currency:"&#8377;"}}</span>
@@ -151,6 +156,9 @@
                       </p>
                     </a>
                   </div>
+                  <a class="btn btn-default pull-right"
+                     ng-show="approvedVouchers.length >= 5"
+                     ng-click="employeeVoucherQuery('approved')">View All</a>
                 </div>
               </div>
               <!--Approved vouchers panel ends-->
